# toy-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/agents/: __init__.py  agent.py  cli.py  context.py  llm.py  message.py  store.py  tools.py
tests/: test_agents.py
