[project]
name = "agents"
version = "0.1.0"
description = "A simple AI agent framework for learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
agents = "agents.cli:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
